--- a/src/views/backend/app/walletslider/walletSlider.css
+++ b/src/views/backend/app/walletslider/walletSlider.css
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
 } */
-.App {
+.firstDiv {
     font-family: sans-serif;
     text-align: center;
   }
