--- a/src/assets/css/Customheader.css
+++ b/src/assets/css/Customheader.css
@@ -115,3 +115,9 @@
                     margin-top: 5% !important;
                   }
             }
+
+            @media screen and (min-width: 2800px) and (max-width: 5080px){
+                .DashborCards{
+                    margin-top: 10% !important;
+                  }
+            }
