--- a/src/assets/css/Customheader.css
+++ b/src/assets/css/Customheader.css
@@ -1,4 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 
+.CustomHeaderTitle{
+    font-family: 'Kanit';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 54px;
+color: #ffff;
+}
 
 @media screen and (min-width: 0px) and (max-width: 700px){
 
@@ -11,13 +20,13 @@
     /* display: none;; */
 }
 .LOGOO{
-    width: 61vw !important;
-    height: 10vh!important;
-    display: none !important;
+    width: 35vw !important;
+    /* height: 10vh!important; */
+    /* display: none !important; */
 }
 .Headertitle{
     /* width: 45% !important; */
-       margin-top: 4% !important;
+       /* margin-top: 4% !important; */
 }
 .Headercls{
     
@@ -32,11 +41,11 @@
 
 
 
-@media screen and (min-width: 750px) and (max-width: 1000px){
+/* @media screen and (min-width: 750px) and (max-width: 1000px){
     .Headertitle{
         width: 25% !important;
         margin-top: 2% !important;
-    }}
+    }} */
     @media screen and (min-width: 1000px) and (max-width: 1100px){
         .Headertitle{
             /* width: 20% !important; */
@@ -64,10 +73,10 @@
                 /* width: 20% !important; */
                 margin-top: 2% !important;
             }
-            .Headertitle{
+            /* .Headertitle{
                 width: 35% !important;
                    margin-top: 2% !important;
-            }
+            } */
         }
 
         @media screen and (min-width: 1200px) and (max-width: 2000px){
