--- a/src/views/backend/app/usermanagement/transaction/transaction.css
+++ b/src/views/backend/app/usermanagement/transaction/transaction.css
@@ -5,23 +5,22 @@
   width: 100%;
   margin-top: 40px;
 }
+
 .transaction-option_card {
-  /* position: relative; */
   background: #263642;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
-  padding: 20px 0px;
+  padding: 10px 0px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: block;
-  /* margin: 25px auto; */
   max-width: auto;
   margin-right: 40px;
   width: 25%;
-  max-height: fit-content !important;
+  height: fit-content !important;
   border-radius: 12px;
 }
 .transaction-type_card {
@@ -36,7 +35,6 @@
   -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: block;
-  /* margin: 25px auto; */
   max-width: auto;
 
   width: 75%;
@@ -57,9 +55,24 @@
 .transactionToggleOuter {
   width: 100%;
   height: 38px;
+  display: flex;
+  color: #fff;
+  /* background: #13212d;
+  border-color: #13212d; */
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.transactionToggleOuter:active {
+  width: 100%;
+  height: 38px;
+  display: flex;
   color: #fff;
   background: #13212d;
   border-color: #13212d;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 .labelType {
   font-size: 14px;
@@ -69,4 +82,38 @@
   color: #b3bad1;
   text-align: left;
   margin-bottom: 0 !important;
+}
+.textBelowIcon {
+  font-family: "Montserrat";
+  font-size: 18px;
+  font-weight: 600;
+  color: #b3bad1;
+}
+.navigationButton {
+  width: 250px;
+  display: flex;
+  flex-direction: row;
+  font-family: "Montserrat";
+  font-size: 16px;
+  font-weight: 600;
+  color: #b3bad1;
+  justify-content: space-around;
+}
+.buttonBelowIcon {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 24px;
+  gap: 10px;
+  width: 233px;
+  height: 44px;
+  background: #344452;
+  border-radius: 6px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  color: #ffffff;
+  cursor: pointer;
 }
