--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6516,13 +6516,20 @@ h6 span {
   }
 }
 .form3-body{
-  padding: 1rem 3rem;
+  padding: 1rem 5rem;
 }
+/* .form4-body{
+  padding: 1rem 5rem;
+} */
+
+
+
 @media only screen and (max-width: 1026px) {
   .form3-body{
     padding: 1px 1px;
   }
 }
+
 
 .form5-body{
   /* display: flex;
@@ -6593,7 +6600,7 @@ vertical-align: top;
   /* flex-direction: row; */
   display: flex;
   /* padding: 5px; */
-  position: relative;
+  
  
 }
 .form-upload{
@@ -6603,9 +6610,184 @@ vertical-align: top;
   position: relative;
   top:8px;
 }
+.form-upload-status-2{
+  position: fixed;
+    right: 31px;
+    margin-top: 9px;
+
+}
+.timer-button{
+  position: relative;
+  right:15px;
+ background-color: #11FFBD;
+ border: none;
+ border-radius: 5px;
+ padding: 3px 18px 3px 18px;
+ font-family: 'Montserrat';
+ font-weight: 'bold';
+ font-size: 12px ;
+}
 
 
+.timer{
+  position: relative;
+  top:1px;
+  right:20px;
+  font-weight: 'bold';
+  color:white;
+  
+}
+.timer-2{
+  /* position: relative;
+  top:1px;
+  left:10px; */
+  font-weight: 'bold';
+  color:white;
+  /* margin-left: 20px; */
+  
+}
 
+.timer-layout{
+  display: flex;
+  justify-content: center;
+}
+
+.timer-button-2{
+ 
+ background-color: #11FFBD;
+ border: none;
+ border-radius: 5px;
+ padding: 3px 22px 3px 22px;
+ font-family: 'Montserrat';
+ font-weight: 'bold';
+ font-size: 12px ;
+}
+.email-text{
+  position: relative;
+  top:-30px;
+}
+
+.fileupload-user{
+  background-color: blue;
+}
+
+.success-text{
+ font-family: 'Montserrat';
+  font-weight: 'bold';
+  font-size: 25px;
+}
+.form7-body{
+  padding: 1rem 7rem;
+  margin-bottom: 50px;
+}
+.form-5-button{
+  padding: 2px 17px 2px 17px;
+}
+@media screen and (min-width: 0px) and (max-width: 900px){
+  .form7-body{
+    padding: 1rem 1rem;
+   
+  }
+  
+  .form7-button{
+     text-align: center;
+    
+  }
+  .mobile-button-7{
+    display: block;
+  }
+  .form7-button{
+    display: none;
+  }
+  .form-5-button{
+    display: none;
+  }
+  .mobile-button-5{
+    display: block;
+  }
+  .form-4-button{
+    display: none;
+  }
+  .upload-file-row{
+    display: flex;
+    
+  
+  }
+  .form4-body{
+    padding:0px;
+  } 
+
+  .upload-file-row{
+    display: none;
+  }
+  
+  
+
+
+}
+
+@media screen and (min-width: 901px) and (max-width: 1624px) {
+    
+  .mobile-button-7{
+    display: none;
+  }
+  .form7-button{
+    display: block;
+  }
+  .mobile-button-5{
+    display: none;
+  }
+  .mobile-4-button{
+    display: none;
+  }
+  .no-older{
+    position: relative;
+    right:46px;
+    bottom: 10px; 
+  }
+  .upload-selfie{
+    position: relative;
+    right:46px;
+   
+  }
+  .upload-file-row{
+    position: relative;
+    right:56px;
+    bottom: 10px; 
+  
+  }
+  .form4-body{
+    padding: 1rem 5rem;
+  } 
+  .upload-file-row-mobile{
+    display: none;
+  }
+  
+ 
+
+  
+}
+/* .mobile-button-7{
+  display: none;
+} */
+
+.form7-fotter{
+  float:right;
+  background-color: #1f4949;
+}
+.form7-Button{
+  background-color: #11FFBD;
+ border: none;
+ border-radius: 5px;
+ padding: 3px 22px 3px 22px;
+ /* font-family: 'Montserrat'; */
+ font-weight: 200;
+ font-size: 12px ;
+ color:black;
+
+ /* position:relative;
+ left:77px; */
+}
 /* -----------------------------MODAL USER VERIFICATION/ Aditya ------- */
 
 
@@ -6620,18 +6802,7 @@ vertical-align: top;
 
 
 
-.timer{
-  position: relative;
-  top:5px;
-}
-.email-text{
-  position: relative;
-  top:-30px;
-}
 
-.fileupload-user{
-  background-color: blue;
-}
 .img-fluid1 {
   max-width: 100%;
   height: auto;
