--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -581,7 +581,7 @@ div.dataTables_wrapper div.dataTables_filter label {
     width: 84%;
     border-radius: 6px;
     padding-bottom: 5px;
-    /* width: 105px; */
+    width: 105px;
   }
 
   .form-control-dropdown {
