--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5757,6 +5757,11 @@ h6 span {
 
 .modal.show .modal-dialog {
   justify-content: center !important;
+  /* margin-right: 0px !important;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+  width: 30vw;
+  height: 100vh !important; */
 }
 
 .passwordBtn {
@@ -6202,7 +6207,6 @@ h6 span {
   translate: none !important;
   padding-right: 18px;
   padding-left: 0px;
-
 }
 .wallet-paragraph {
   font-family: "Montserrat";
@@ -6476,22 +6480,20 @@ h6 span {
   border-radius: 10px;
 }
 
-.form2-body{
-   padding: 1rem 4rem; 
+.form2-body {
+  padding: 1rem 4rem;
 }
 @media only screen and (max-width: 1026px) {
   .form2-body {
     padding: 1px 1px;
   }
 }
-.form3-body{
+.form3-body {
   padding: 1rem 5rem;
 }
 /* .form4-body{
   padding: 1rem 5rem;
 } */
-
-
 
 @media only screen and (max-width: 1026px) {
   .form3-body {
@@ -6499,8 +6501,7 @@ h6 span {
   }
 }
 
-
-.form5-body{
+.form5-body {
   /* display: flex;
     justify-content: center;
     flex-direction: column; */
@@ -6561,213 +6562,177 @@ h6 span {
   font-size: 35px;
 }
 
-
-.upload-file-row{
+.upload-file-row {
   /* flex-direction: row; */
   display: flex;
   /* padding: 5px; */
-  
- 
 }
-.form-upload{
+.form-upload {
   margin: 10px;
 }
-.form-upload-status{
+.form-upload-status {
   position: relative;
-  top:8px;
+  top: 8px;
 }
-.form-upload-status-2{
+.form-upload-status-2 {
   position: fixed;
-    right: 31px;
-    margin-top: 9px;
-
+  right: 31px;
+  margin-top: 9px;
 }
-.timer-button{
+.timer-button {
   position: relative;
-  right:24px;
- background-color: #11FFBD;
- border: none;
- border-radius: 5px;
- padding: 3px 18px 3px 18px;
- font-family: 'Montserrat';
- font-weight: 'bold';
- font-size: 12px ;
+  right: 24px;
+  background-color: #11ffbd;
+  border: none;
+  border-radius: 5px;
+  padding: 3px 18px 3px 18px;
+  font-family: "Montserrat";
+  font-weight: "bold";
+  font-size: 12px;
 }
 
-
-.timer{
+.timer {
   position: relative;
-  top:1px;
-  right:20px;
-  font-weight: 'bold';
-  color:white;
-  
+  top: 1px;
+  right: 20px;
+  font-weight: "bold";
+  color: white;
 }
-.timer-2{
+.timer-2 {
   /* position: relative;
   top:1px;
   left:10px; */
-  font-weight: 'bold';
-  color:white;
+  font-weight: "bold";
+  color: white;
   /* margin-left: 20px; */
-  
 }
 
-.timer-layout{
+.timer-layout {
   display: flex;
   justify-content: center;
 }
 
-.timer-button-2{
- 
- background-color: #11FFBD;
- border: none;
- border-radius: 5px;
- padding: 3px 22px 3px 22px;
- font-family: 'Montserrat';
- font-weight: 'bold';
- font-size: 12px ;
+.timer-button-2 {
+  background-color: #11ffbd;
+  border: none;
+  border-radius: 5px;
+  padding: 3px 22px 3px 22px;
+  font-family: "Montserrat";
+  font-weight: "bold";
+  font-size: 12px;
 }
-.email-text{
+.email-text {
   position: relative;
-  top:-30px;
+  top: -30px;
 }
 
-.fileupload-user{
+.fileupload-user {
   background-color: blue;
 }
 
-.success-text{
- font-family: 'Montserrat';
-  font-weight: 'bold';
+.success-text {
+  font-family: "Montserrat";
+  font-weight: "bold";
   font-size: 25px;
 }
-.form7-body{
+.form7-body {
   padding: 1rem 7rem;
   margin-bottom: 50px;
 }
-.form-5-button{
+.form-5-button {
   padding: 2px 17px 2px 17px;
 }
-@media screen and (min-width: 0px) and (max-width: 900px){
-  .form7-body{
+@media screen and (min-width: 0px) and (max-width: 900px) {
+  .form7-body {
     padding: 1rem 1rem;
-   
   }
-  
-  .form7-button{
-     text-align: center;
-    
+
+  .form7-button {
+    text-align: center;
   }
-  .mobile-button-7{
+  .mobile-button-7 {
     display: block;
   }
-  .form7-button{
+  .form7-button {
     display: none;
   }
-  .form-5-button{
+  .form-5-button {
     display: none;
   }
-  .mobile-button-5{
+  .mobile-button-5 {
     display: block;
   }
-  .form-4-button{
+  .form-4-button {
     display: none;
   }
-  .upload-file-row{
+  .upload-file-row {
     display: flex;
-    
-  
   }
-  .form4-body{
-    padding:0px;
-  } 
+  .form4-body {
+    padding: 0px;
+  }
 
-  .upload-file-row{
+  .upload-file-row {
     display: none;
   }
-  
-  
-
-
 }
 
 @media screen and (min-width: 901px) and (max-width: 1624px) {
-    
-  .mobile-button-7{
+  .mobile-button-7 {
     display: none;
   }
-  .form7-button{
+  .form7-button {
     display: block;
   }
-  .mobile-button-5{
+  .mobile-button-5 {
     display: none;
   }
-  .mobile-4-button{
+  .mobile-4-button {
     display: none;
   }
-  .no-older{
+  .no-older {
     position: relative;
-    right:46px;
-    bottom: 10px; 
+    right: 46px;
+    bottom: 10px;
   }
-  .upload-selfie{
+  .upload-selfie {
     position: relative;
-    right:46px;
-   
+    right: 46px;
   }
-  .upload-file-row{
+  .upload-file-row {
     position: relative;
-    right:56px;
-    bottom: 10px; 
-  
+    right: 56px;
+    bottom: 10px;
   }
-  .form4-body{
+  .form4-body {
     padding: 1rem 5rem;
-  } 
-  .upload-file-row-mobile{
+  }
+  .upload-file-row-mobile {
     display: none;
   }
-  
- 
-
-  
 }
 /* .mobile-button-7{
   display: none;
 } */
 
-.form7-fotter{
-  float:right;
+.form7-fotter {
+  float: right;
   background-color: #1f4949;
 }
-.form7-Button{
-  background-color: #11FFBD;
- border: none;
- border-radius: 5px;
- padding: 3px 22px 3px 22px;
- /* font-family: 'Montserrat'; */
- font-weight: 200;
- font-size: 12px ;
- color:black;
+.form7-Button {
+  background-color: #11ffbd;
+  border: none;
+  border-radius: 5px;
+  padding: 3px 22px 3px 22px;
+  /* font-family: 'Montserrat'; */
+  font-weight: 200;
+  font-size: 12px;
+  color: black;
 
- /* position:relative;
+  /* position:relative;
  left:77px; */
 }
 /* -----------------------------MODAL USER VERIFICATION/ Aditya ------- */
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .img-fluid1 {
   max-width: 100%;
@@ -7287,17 +7252,16 @@ select {
     .WalletButtonText {
       font-size: 9px;
     }
-.wallet-linl-text{
-  font-size: 11px;
-}
-.navItem{ 
+    .wallet-linl-text {
+      font-size: 11px;
+    }
+    .navItem {
+      color: black;
+      background-color: #11ffbd;
+      border: none;
+    }
 
-  color:black; 
-  background-color:#11ffbd; 
-  border: none;
-}
-
-/* .form-control {
+    /* .form-control {
   background-color: #0d1d29!important;
   color: #fff!important;
   width: 84%;
@@ -7305,8 +7269,7 @@ select {
   padding-bottom: 5px;
   width: 100%;
   } */
-
-}
+  }
 }
 
 @media not all and (min-resolution: 0.001dpcm) {
