--- a/src/components/Chat/chat.css
+++ b/src/components/Chat/chat.css
@@ -1,10 +1,10 @@
 @media screen and (max-width: 800px) {
   .rcw-widget-container {
     /* height: 100%;
-    height: 100vh;
-    margin: 0;
-    max-width: none;
-    width: 100%; */
+  height: 100vh;
+  margin: 0;
+  max-width: none;
+  width: 100%; */
   }
 
   .chat-toggle {
@@ -17,13 +17,13 @@
   }
 
   /* .rcw-message > .rcw-response {
-    background-color: black;
-    color: white;
-  } */
+  background-color: black;
+  color: white;
+} */
 }
 
 .chat_card {
-  position: relative;
+  position: fixed;
   background: #1e2c37;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
@@ -34,12 +34,8 @@
   -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: block;
-  /* margin: 25px auto; */
-  max-width: auto;
-  max-height: fit-content !important;
-  width: 91%;
-  float: right;
-  margin: 20px;
+  height: 100%;
+  width: 100%;
 }
 
 .chat-innertext {
@@ -78,12 +74,12 @@
   font-size: 14px;
   line-height: 15px;
 
-  /* Ultrafair - White */
+  /* Ultrafair - White  */
 
   color: #ffffff;
 }
 
-/* .chat-seachbar {
+.chat-seachbar {
   margin-top: 5px !important;
   width: 100%;
   height: 50px;
@@ -97,7 +93,7 @@
   color: #b3bad1;
   line-height: 17px;
   font-weight: 500;
-} */
+}
 
 input::placeholder {
   color: #b3bad1 !important;
@@ -120,19 +116,21 @@ input::placeholder {
   font-size: 14px;
 }
 
-/* .chat-topbar {
+.chat-topbar {
   height: 60px;
   left: 0px;
   top: 0px;
   margin-bottom: 20px;
+  /* Ultrafair - Dark 150  */
+
   background: #1e2c37;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-} */
+}
 
 .form-control-dropdown-topbar {
-  /* background-color: #191919 !important; */
+  /* background-color: #191919 !important;  */
   border: none !important;
-  /* background: #191919 !important; */
+  /* background: #191919 !important;  */
   height: 46px;
   position: relative;
   color: white;
@@ -144,4 +142,3 @@ input::placeholder {
   -webkit-margin-start: 5px;
   margin-inline-start: 5px;
 }
-
