--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7107,14 +7107,14 @@ select {
 }
 
 
+/* @media not all and (min-resolution:.001dpcm) { 
+
+
+
 @media not all and (min-resolution:.001dpcm) { 
 
 
-=======
-@media not all and (min-resolution:.001dpcm) { 
-
-
-}
+} */
 
 @media not all and (min-resolution: 0.001dpcm) {
 
