--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7355,7 +7355,7 @@ select {
   .wallet-head {
     padding: 2vw;
   }
-
+}
 @media screen and (min-width: 1850px) and (max-width: 3000px) {
 .Searchtext1{
   margin-top: 20%;
