All issue resolved (28_10_2022)

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6223,7 +6223,7 @@ h6 span {
 .wallet-paragraph {
   font-family: "Montserrat";
   font-size: 11px;
-  color:whitesmoke;
+  color: whitesmoke;
 }
 
 .wallet-Button {
@@ -6464,8 +6464,8 @@ h6 span {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-.currency-text{
-  color:white;
+.currency-text {
+  color: white;
 }
 
 @media screen and (min-width: 0px) and (max-width: 760px) {
@@ -6525,8 +6525,7 @@ h6 span {
   }
 }
 
-
-.form5-body{
+.form5-body {
   /* display: flex;
     justify-content: center;
     flex-direction: column; */
@@ -6537,7 +6536,7 @@ h6 span {
   margin-bottom: 15px;
   color: white;
 }
-.user-verification-5-header h3{
+.user-verification-5-header h3 {
   color: white;
 }
 
@@ -6606,7 +6605,7 @@ h6 span {
 .form-upload-status {
   position: relative;
   top: 8px;
-  color:white;
+  color: white;
 }
 .form-upload-status-2 {
   position: fixed;
@@ -6664,13 +6663,11 @@ h6 span {
   font-weight: "bold";
   font-size: 12px;
 }
-.form-upload-status-2{
+.form-upload-status-2 {
   position: fixed;
-    right: 31px;
-    margin-top: 9px;
-
+  right: 31px;
+  margin-top: 9px;
 }
-
 
 .timer {
   position: relative;
@@ -6716,7 +6713,7 @@ h6 span {
 .email-text {
   position: relative;
   top: -30px;
-  color:white;
+  color: white;
 }
 
 .fileupload-user {
@@ -6729,7 +6726,6 @@ h6 span {
   font-size: 25px;
   color: white;
 }
-
 
 .form-5-button {
   padding: 2px 17px 2px 17px;
@@ -6827,7 +6823,6 @@ h6 span {
   display: none;
 } */
 
-
 .form7-Button {
   background-color: #11ffbd;
   border: none;
@@ -6859,146 +6854,130 @@ input[type="file"] {
   text-align: center;
 }
 
-.timer-layout{
+.timer-layout {
   display: flex;
   justify-content: center;
 }
 
-.timer-button-2{
- 
- background-color: #11FFBD;
- border: none;
- border-radius: 5px;
- padding: 3px 22px 3px 22px;
- font-family: 'Montserrat';
- font-weight: 'bold';
- font-size: 12px ;
+.timer-button-2 {
+  background-color: #11ffbd;
+  border: none;
+  border-radius: 5px;
+  padding: 3px 22px 3px 22px;
+  font-family: "Montserrat";
+  font-weight: "bold";
+  font-size: 12px;
 }
-.email-text{
+.email-text {
   position: relative;
-  top:-30px;
+  top: -30px;
 }
 
-.fileupload-user{
+.fileupload-user {
   background-color: blue;
 }
 
-.success-text{
- font-family: 'Montserrat';
-  font-weight: 'bold';
+.success-text {
+  font-family: "Montserrat";
+  font-weight: "bold";
   font-size: 25px;
 }
-.form7-body{
+.form7-body {
   padding: 1rem 7rem;
   margin-bottom: 10px;
 }
-.form-5-button{
+.form-5-button {
   padding: 2px 17px 2px 17px;
 }
-@media screen and (min-width: 0px) and (max-width: 900px){
-  .form7-body{
+@media screen and (min-width: 0px) and (max-width: 900px) {
+  .form7-body {
     padding: 1rem 1rem;
-   
   }
-  
-  .form7-button{
-     text-align: center;
-    
+
+  .form7-button {
+    text-align: center;
   }
-  .mobile-button-7{
+  .mobile-button-7 {
     display: block;
   }
-  .form7-button{
+  .form7-button {
     display: none;
   }
-  .form-5-button{
+  .form-5-button {
     display: none;
   }
-  .mobile-button-5{
+  .mobile-button-5 {
     display: block;
   }
-  .form-4-button{
+  .form-4-button {
     display: none;
   }
-  .upload-file-row{
+  .upload-file-row {
     display: flex;
-    
-  
   }
-  .form4-body{
-    padding:0px;
-  } 
+  .form4-body {
+    padding: 0px;
+  }
 
-  .upload-file-row{
+  .upload-file-row {
     display: none;
   }
-  
-  
-
-
 }
 
 @media screen and (min-width: 901px) and (max-width: 1624px) {
-    
-  .mobile-button-7{
+  .mobile-button-7 {
     display: none;
   }
-  .form7-button{
+  .form7-button {
     display: block;
   }
-  .mobile-button-5{
+  .mobile-button-5 {
     display: none;
   }
-  .mobile-4-button{
+  .mobile-4-button {
     display: none;
   }
-  .no-older{
+  .no-older {
     position: relative;
-    right:46px;
-    bottom: 10px; 
+    right: 46px;
+    bottom: 10px;
     color: white;
   }
-  .upload-selfie{
+  .upload-selfie {
     position: relative;
-    right:46px;
-   
+    right: 46px;
   }
-  .upload-file-row{
+  .upload-file-row {
     position: relative;
-    right:56px;
-    bottom: 10px; 
-  
+    right: 56px;
+    bottom: 10px;
   }
-  .form4-body{
+  .form4-body {
     padding: 1rem 5rem;
-  } 
-  .upload-file-row-mobile{
+  }
+  .upload-file-row-mobile {
     display: none;
   }
-  
- 
-
-  
 }
 /* .mobile-button-7{
   display: none;
 } */
 
-.form7-fotter{
-  float:right;
+.form7-fotter {
+  float: right;
   background-color: #1f4949;
 }
-.form7-Button{
-  background-color: #11FFBD;
- border: none;
- border-radius: 5px;
- padding: 3px 22px 3px 22px;
- /* font-family: 'Montserrat'; */
- font-weight: 200;
- font-size: 12px ;
- color:black;
+.form7-Button {
+  background-color: #11ffbd;
+  border: none;
+  border-radius: 5px;
+  padding: 3px 22px 3px 22px;
+  /* font-family: 'Montserrat'; */
+  font-weight: 200;
+  font-size: 12px;
+  color: black;
 
- /* position:relative;
+  /* position:relative;
  left:77px; */
 }
 /* -----------------------------MODAL USER VERIFICATION/ Aditya ------- */
