--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1908,7 +1908,7 @@ input[type="range"]::-webkit-slider-thumb {
   margin-top: -13.5px;
 }
 input[type="range"]:focus::-webkit-slider-runnable-track {
-  /* background: #053a5f; */
+  background: #053a5f;
 }
 input[type="range"]::-moz-range-track {
   width: 100%;
