--- a/src/views/backend/app/walletslider/walletSlider.css
+++ b/src/views/backend/app/walletslider/walletSlider.css
@@ -8,13 +8,13 @@
   align-items: center;
   justify-content: center;
 } */
-.firstDiv {
-    font-family: sans-serif;
-    text-align: center;
-  }
-  .slider-parent {
-    /* top: 50vh;
-      left: 50%; */
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
+.slider-parent {
+  /* top: 50vh;
+    left: 50%; */
   position: relative;
 }
 .buble {
@@ -41,24 +41,24 @@
   background: linear-gradient(
     to right,
     #ef5b5b 0%,
-    #ef5b5b 20.6%,
-    white 20.6%,
-    white 21%,
-    #ef5b5b 21%,
-    #ef5b5b 40%,
-    white 40%,
-    white 40.4%,
-    #ef5b5b 40.4%,
-    #ef5b5b 59%,
+    #ef5b5b 22.6%,
+    white 22.6%,
+    white 23%,
+    #ef5b5b 23%,
+    #ef5b5b 40.6%,
+    white 40.6%,
+    white 41%,
+    #ef5b5b 41%,
+    #ef5b5b 58.8%,
+    white 58.8%,
     white 59%,
-    white 59.4%,
-    #ef5b5b 59.4%,
+    #ef5b5b 59%,
     #ef5b5b 70%,
     #f7b32b 70%,
-    #f7b32b 78.8%,
-    white 78.8%,
-    white 79.2%,
-    #11ffbd 79.2%,
+    #f7b32b 76.6%,
+    white 76.6%,
+    white 77%,
+    #11ffbd 77%,
     #11ffbd 100%
   );
   height: 10px;
@@ -70,17 +70,17 @@
   -moz-box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
 }
 /* .block-red {
-      height: 20px;
-      left: 50%;
-    } */
+    height: 20px;
+    left: 50%;
+  } */
 
 .slider::-webkit-slider-thumb {
   margin-top: 36px;
   /* width: 0;
-      height: 0;
-      border-left: 25px solid transparent;
-      border-right: 25px solid transparent;
-      border-bottom: 25px solid #555; */
+    height: 0;
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    border-bottom: 25px solid #555; */
   cursor: pointer;
   appearance: none;
   background: url("./Vector.png");
@@ -88,6 +88,9 @@
   width: 12px;
   background-size: contain;
   background-repeat: no-repeat;
+  /* border-radius: 50%; */
+  /* border: 7px solid rgba(255, 255, 255); */
+  /* border-radius: 25px; */
   box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
   -webkit-box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
   -moz-box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
