--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1865,7 +1865,7 @@ NOTE: This file contains the styling for responsive Template.
 
 /* here is Input css  */
 
- .Green input[type="range"] {
+.Green input[type="range"] {
   height: 43px;
   -webkit-appearance: none;
   margin: 10px 0;
@@ -1925,7 +1925,7 @@ input[type="range"]:focus {
   margin-top: -13.5px;
 }
 input[type="range"]:focus::-webkit-slider-runnable-track {
-  background: #053a5f;
+  /* / background: #053a5f; / */
 }
 input[type="range"]::-moz-range-track {
   width: 100%;
@@ -1995,4 +1995,8 @@ input[type="range"]:focus::-ms-fill-upper {
 
 .Fire {
   background-color: transparent;
+}
+
+div {
+  color: white;
 }
