--- a/src/views/backend/app/walletslider/walletSlider.css
+++ b/src/views/backend/app/walletslider/walletSlider.css
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
 } */
-.App {
+.firstDiv {
   font-family: sans-serif;
   text-align: center;
 }
@@ -41,24 +41,24 @@
   background: linear-gradient(
     to right,
     #ef5b5b 0%,
-    #ef5b5b 22.6%,
-    white 22.6%,
-    white 23%,
-    #ef5b5b 23%,
-    #ef5b5b 40.6%,
-    white 40.6%,
-    white 41%,
-    #ef5b5b 41%,
-    #ef5b5b 58.8%,
-    white 58.8%,
-    white 59%,
+    #ef5b5b 20.6%,
+    white 20.6%,
+    white 21%,
+    #ef5b5b 21%,
+    #ef5b5b 40%,
+    white 40%,
+    white 40.4%,
+    #ef5b5b 40.4%,
     #ef5b5b 59%,
+    white 59%,
+    white 59.4%,
+    #ef5b5b 59.4%,
     #ef5b5b 70%,
     #f7b32b 70%,
-    #f7b32b 76.6%,
-    white 76.6%,
-    white 77%,
-    #11ffbd 77%,
+    #f7b32b 78.8%,
+    white 78.8%,
+    white 79.2%,
+    #11ffbd 79.2%,
     #11ffbd 100%
   );
   height: 10px;
@@ -88,9 +88,6 @@
   width: 12px;
   background-size: contain;
   background-repeat: no-repeat;
-  /* border-radius: 50%; */
-  /* border: 7px solid rgba(255, 255, 255); */
-  /* border-radius: 25px; */
   box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
   -webkit-box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
   -moz-box-shadow: 2px 8px 13px -3px rgba(116, 114, 114, 0.75);
