--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5598,7 +5598,7 @@ h6 span {
 .privacyPolicy {
   width: fit-content;
   height: 30px;
-
+  color:white;
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 500;
@@ -5782,6 +5782,7 @@ h6 span {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  width:100% !important;
 }
 
 .cards-section {
